доработано переключение категорий товаров, доработан код выпадающего меню

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "last 3 version"
   ],
   "author": "",
-
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -43,6 +42,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "vue": "^2.6.10"
   }
 }
