--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "file-loader": "^4.2.0",
+    "html-replace-webpack-plugin": "^2.6.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery-mask-plugin": "^1.14.16",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
@@ -32,6 +34,7 @@
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.0",
+    "string-replace-loader": "^3.1.0",
     "style-loader": "^1.0.0",
     "vue-loader": "^15.7.1",
     "vue-style-loader": "^4.1.2",
